<resources>
    <string name="default_web_client_id">249674044222-k268sdgp31rv1irs3btc2i2jvf9j2c82.apps.googleusercontent.com</string>
    <string name="app_name">ReparaTech</string>
    <string name="brand_name">ReparaTech</string>
    <string name="precision_maintenance">PRECISION MAINTENANCE</string>
    <string name="initializing_system">INITIALIZING SYSTEM...</string>
    <string name="welcome_back">Bienvenido de nuevo</string>
    <string name="welcome">Bienvenido</string>
    <string name="login_subtitle_new">Inicia sesión para continuar</string>
    <string name="login_subtitle">Inicie sesión para gestionar sus reparaciones</string>
    <string name="system_description">Sistema de Gestión de Mantenimiento</string>
    <string name="client">Cliente</string>
    <string name="admin">Administrador</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="enter">Entrar</string>
    <string name="no_account">¿No tienes cuenta? </string>
    <string name="register_here">Regístrate aquí</string>
    <string name="register">Regístrate</string>
    <string name="welcome_carlos">Hola, Carlos.</string>
    <string name="home_subtitle">Aquí tienes el estado actual de tus dispositivos en nuestro taller.</string>
    <string name="active_repairs">Reparaciones Activas</string>
    <string name="macbook_pro">MacBook Pro M2</string>
    <string name="order_id">ORD-8924A</string>
    <string name="in_diagnosis">En Diagnóstico</string>
    <string name="repair_description">Revisión de placa base tras derrame de líquido. Técnicos evaluando daños en componentes SMD.</string>
    <string name="est_completion">Est. Completado: 24 Oct</string>
    <string name="details">Detalles →</string>
    <string name="maintenance_tip">CONSEJO DE MANTENIMIENTO</string>
    <string name="battery_tip_title">Optimiza la batería de tu portátil</string>
    <string name="battery_tip_desc">Para prolongar la vida útil de la batería, evita mantenerla conectada al 100% constantemente.</string>
    <string name="read_more">Leer más consejos</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_requests">Solicitudes</string>
    <string name="nav_repairs">Reparaciones</string>
    <string name="nav_devices">Equipos</string>
    <string name="nav_profile">Perfil</string>
    <string name="toggle_visibility">Toggle Visibility</string>
    <string name="branding_illustration">Branding Illustration</string>
    <string name="service_technical">Servicio Técnico</string>

    <!-- Mercado Pago (Reemplaza con tu TEST-...) -->
    <string name="mercadopago_public_key">TESTUSER8483311900307779765</string>
    <string name="mercadopago_demo_link">https://mpago.la/2Jcu2wG</string>
    <string name="mercadopago_access_token">APP_USR-1627960419855721-061620-78bf305067bf0f20cb643d7819202ffd-3479409406</string>
</resources>
